@@ -67,7 +67,7 @@ public abstract class GradleBuildAssert<SELF extends GradleBuildAssert<SELF>> ex
 	 * @return {@code this} assertion object
 	 */
 	public SELF hasProperty(String name, String value) {
-		return contains(String.format("%s = %s", name, quote(value)));
+		return contains("%s = %s".formatted(name, quote(value)));
 	}
 
 	/**
@@ -76,12 +76,12 @@ public abstract class GradleBuildAssert<SELF extends GradleBuildAssert<SELF>> ex
 	 * @return {@code this} assertion object
 	 */
 	public SELF containsOnlyExtProperties(String... values) {
-		StringBuilder builder = new StringBuilder(String.format("ext {%n"));
+		StringBuilder builder = new StringBuilder("ext {%n".formatted());
 		if (values.length % 2 == 1) {
 			throw new IllegalArgumentException("Size must be even, it is a set of property=value pairs");
 		}
 		for (int i = 0; i < values.length; i += 2) {
-			builder.append(String.format("\tset(%s, \"%s\")%n", quote(values[i]), values[i + 1]));
+			builder.append("\tset(%s, \"%s\")%n".formatted(quote(values[i]), values[i + 1]));
 		}
 		builder.append("}");
 		return contains(builder.toString());
